# techpulse_backend

./: .env.example  Dockerfile  README.md  _.mermaid  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  tech_pulse_local.db
alembic/: env.py
alembic/versions/: 20260320_0008_sms_version_lifecycle.py  20260422_0009_add_audit_observability_tables.py  550233925a2d_added_c_at_u_at_d_at_columns_on_.py  952359f24a21_added_deletion_tracking_in_sftw_table.py  9e42755810da_added_a_download_count_row.py  c27694a858d2_initial_revision.py
app/: main.py
app/SMS_module/: SMS_MODULE_OVERVIEW.md  WORKSPACE_REPORT.md
app/core/: abuse_protection.py  app_cycle_manger.py  audit_middleware.py  config.py  hashing.py  lifespan.py  logging_setup.py  security.py  unit_of_work.py
app/database/: initialize_db.py
app/exceptions/: exceptions.py  handlers.py
app/models/: enums.py  payment.py  software.py
app/repositories/: audit.py  software.py  software_package.py  user.py
app/schemas/: software.py  user.py
app/services/: app_cycle_manger.py  audit_service.py  auth_service.py  malware_scanner.py  payment_provider.py  project_hub_service.py  software_package_service.py  software_service.py  superuser_seeder.py  support_chat_service.py  user_service.py
reports/: software_management_report.html  software_management_results.xml  software_management_sms_report.html  software_management_sms_results.xml  software_management_test_summary.md
software_management/: README.md  bootstrap.py
software_management/application/: __init__.py  dtos.py  interfaces.py  use_cases.py
software_management/domain/: __init__.py  aggregates.py  entities.py  events.py  value_objects.py
software_management/infrastructure/: __init__.py  db.py  event_publisher.py  models.py  repository.py  storage.py
software_management/presentation/: router.py  schemas.py
techpulse_backend/app/: __init__.py
tests/integration/: test_software_management_upload_download.py
tests/unit/: test_checkout_service.py  test_smoke.py  (+6 more)
(+208 files in other folders)
