[project]
name = "techpulse-backend"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
     # ASGI server
    "uvicorn==0.30.6",

    # Web framework
    "fastapi==0.115.0",
    "starlette==0.38.6",
    "python-multipart==0.0.9",

    # Database
    "SQLAlchemy==2.0.36",
    "alembic==1.18.3",
    "aiosqlite==0.21.0",
    "greenlet==3.2.4",
    "psycopg2-binary==2.9.10",
    "asyncpg==0.30.0",

    # Pydantic / validation
    "pydantic==2.9.2",
    "pydantic-settings==2.12.0",
    "pydantic_core==2.23.4",
    "annotated-types==0.7.0",
    "email-validator==2.3.0",

    # Auth / security
    "PyJWT==2.11.0",
    "python-jose==3.3.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==25.1.0",
    "cryptography==46.0.4",
    "ecdsa==0.19.1",
    "pyasn1==0.6.2",
    "rsa==4.9.1",

    # Redis / caching / task queue
    "redis==5.3.1",
    "aioredis==2.0.1",
    "hiredis==3.3.0",
    "arq==0.27.0",
    "async-timeout==5.0.1",

    # Email
    "aiosmtplib==5.1.0",

    # HTTP client
    "httpx==0.27.2",
    "httpcore==1.0.9",
    "requests==2.32.3",
    "urllib3==2.6.3",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "dnspython==2.8.0",

    # Templating
    "Jinja2==3.1.3",
    "MarkupSafe==3.0.3",
    "Mako==1.3.10",

    # Async / concurrency
    "anyio==4.12.1",
    "sniffio==1.3.1",

    # File I/O
    "aiofiles==24.1.0",

    # CLI / utilities
    "click==8.3.1",
    "colorama==0.4.6",
    "python-dotenv==1.0.1",
    "blinker==1.9.0",
    "six==1.17.0",
    "packaging==26.0",
    "regex==2025.11.3",
    "typing_extensions==4.15.0",
    "typing-inspection==0.4.2",

    # C extensions
    "cffi==2.0.0",
    "pycparser==3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "fakeredis==2.34.0",
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"